# chatpilot

./: .gitignore  Makefile  README.md  demo_ui.py  docker-compose.yaml  requirements.txt
backend/src/: main.py
backend/src/api/: endpoints.py
backend/src/api/routes/: chat.py  health.py
backend/src/pkg/: utils.py
backend/tests/: smentic_textual_similarity.py
db/lupin/: Cargo.toml
db/lupin/src/: main.rs  settings.rs
docs/: development.md
