[package]
name = "lupin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
config = "0.14.0"
futures = "0.3.30"
once_cell = "1.19.0"
serde = "1.0.207"
tokio = {version = "1.39.1", features = ["full"]}
# helpful for testing
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = { version="0.3.18", features = ["env-filter"] }
